<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:title="@string/app_name"
        app:menu="@menu/principal_auth"
        tools:ignore="InvalidId" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_uide"
                style="@style/margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/msg_view"
                style="@style/msg"
                android:contentDescription="@string/msg_login"
                android:text="@string/msg_login"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_msg"
                app:layout_constraintEnd_toEndOf="@id/logo_uide"
                app:layout_constraintTop_toBottomOf="@id/logo_uide" />


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/user_field"
                style="@style/inputs"
                android:contentDescription="@string/email"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/msg_view"
                app:layout_constraintStart_toStartOf="@id/msg_view"
                app:layout_constraintTop_toBottomOf="@+id/msg_view"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/password_field"
                style="@style/inputs"
                android:contentDescription="@string/password"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="@id/user_field"
                app:layout_constraintTop_toBottomOf="@+id/user_field"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_msg"
                style="@style/read_msg"
                android:layout_marginEnd="@dimen/margin_end_read_txt"
                android:gravity="right"
                android:text="@string/new_user"
                app:layout_constraintStart_toStartOf="@id/password_field"
                app:layout_constraintTop_toBottomOf="@+id/password_field" />

            <TextView
                android:id="@+id/register_msg"
                style="@style/click_msg"
                android:gravity="right"
                android:text="@string/register"
                app:layout_constraintStart_toStartOf="@id/password_field"
                app:layout_constraintTop_toBottomOf="@+id/password_field" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/btn"
                android:layout_marginTop="@dimen/input_padding"
                android:contentDescription="@string/login_btn"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/forgot_msg"
                app:layout_constraintTop_toBottomOf="@+id/forgot_msg" />


            <TextView
                android:id="@+id/or_msg"
                style="@style/read_msg"
                android:clickable="true"
                android:gravity="left"
                android:text="@string/login_whit"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/social_opt"
                style="@style/click_msg"
                android:layout_marginStart="110dp"
                android:clickable="true"
                android:gravity="left"
                android:text="@string/social_media"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bajo"
        tools:ignore="InvalidId" />

</androidx.constraintlayout.widget.ConstraintLayout>